[package]
name = "serde-json-fmt"
version = "0.1.0"
edition = "2021"
authors = ["John Thorvald Wodder II <serde-json-fmt@varonathe.org>"]
repository = "https://github.com/jwodder/serde-json-fmt"
license = "MIT"
exclude = ["/.*"]

[dependencies]
serde = { version = "1.0.160", default-features = false }
serde_json = "1.0.96"
smartstring = "1.0.1"

[dev-dependencies]
rstest = { version = "0.17.0", default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
