[package]
name = "serde-json-fmt"
version = "0.2.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Configurable formatting for serde_json serialization"
authors = ["John Thorvald Wodder II <serde-json-fmt@varonathe.org>"]
repository = "https://github.com/jwodder/serde-json-fmt"
license = "MIT"
keywords = ["json", "serde", "serde-json"]
categories = ["encoding", "value-formatting"]
exclude = ["/.*"]

[dependencies]
serde = { version = "1.0.160", default-features = false }
serde_json = "1.0.96"
smartstring = "1.0.1"

[dev-dependencies]
indoc = "2.0.1"
rstest = { version = "0.17.0", default-features = false }
